# hl

./: .gitignore  DEVREADME  INSTALL  LICENSE  Makefile.am  README  TODO  autogen.sh  configure.ac  test_until_error
benchmark/: README  recursion.hlc
doc/: assembler.txt  asynchronous-io.txt  build-system.txt  bytecodes.txt  dotest.txt  globals.txt  process-gc.txt
hl2b/: README  TODO  autogen.sh  bc.hl  bootstrap.arc  bytecodegen.hl  closures.hl  codegen.hl  compiler.arc  compiler.hl  cps.hl  examples.hl  hl.arc  macex.hl  make-eval.hl  quote-lift.hl  read-cs-dir.arc  sharedvars.hl  simple-test.arc  structs.hl  test.arc  utils.hl  xe.hl
hl2b/cs/: .gitignore  000500-default-error-handler.hl  001000-asm.hl  001100-apply-list.hl  002000-proc-local.hl  002500-list.hl  003000-dyn-wind-ccc.hl  004000-spawn-send-recv.hl  005000-gvl.hl  006000-error.hl  006500-hl-spawn.hl  007000-polymorph.hl  008000-wait-message.hl  009000-central-event.hl  010000-base-io.hl  010000-fn.hl  010500-table.hl  010600-call-sref.hl  01100-higher-io.hl  011000-buffered-io.hl  011500-scanners.hl  011600-writec-readc.hl  012000-higher-io.hl  012000-trap-signal.hl  012500-uniq.hl  013000-higher-io.hl  014000-stdin-out-err.hl  015000-write.hl  016000-copy.hl  016500-fix-asm.hl  020000-reducto.hl  021000-compare.hl  022000-arithmetic.hl  023000-compose.hl  024000-scanner-algorithms.hl  024900-types.hl  025000-fn.hl  027500-string.hl  029000-shared-table.hl  030000-pkg.hl  (+3 more)
hl2b/tests/: backtrace.hl  if.hl  lambda.hl  lit.hl  runall.hl
inc/: aio.hpp  aio_select_backend.hpp  aio_thread_backend.hpp  all_defines.hpp  assembler.hpp  bars.hpp  bytecodes.hpp  executors.hpp  generics.hpp  hashes.hpp  heaps.hpp  history.hpp  intrusives.hpp  lockeds.hpp  mutexes.hpp  new_aio.hpp  obj_aio.hpp  objects.hpp  processes.hpp  reader.hpp  specializeds.hpp  symbols.hpp  types.hpp  unichars.hpp  valueholders.hpp  workarounds.hpp  workers.hpp
ll/: .gitignore  ll.arc  std.ll  test.ll
os/: read_directory.hpp  thread.hpp
src/: .gitignore  Makefile.am  aio.cpp  aio_select_backend.cpp  aio_thread_backend.cpp  assembler.cpp  check_compile  executors.cpp  generics.cpp  globals.cpp  heaps.cpp  history.cpp  hl.cpp  hlstrings.cpp  ios_posix.cpp  main.cpp  processes.cpp  reader.cpp  symbols.cpp  symtable.cpp  symtravdtor.cpp  types.cpp  unichars.cpp  workers.cpp
test/: .gitignore  Makefile.am  dotest.pl  info.txt
test/accessor/: info.txt  is-accessor.test  non-accessor.test  use-accessor.test
test/aio/: .gitignore  TODO  compile_niaw  compile_test1  compile_test2  hello.hlbc  info.txt  niaw.cpp  niaw.hlbc  test1.cpp  test2.cpp
test/disassembler/: .gitignore  Makefile.am  compile_driver  driver.cpp  info.txt
test/disassembler/tests/: t1.test
test/executors/: .gitignore  Makefile.am  compile_test  info.txt  run_bytecode.cpp
test/executors/tests/: assemble.test  call.test  globals.test  math.test  nontest  t1.test  t2.test
test/heaps/: compile_test  inclusion_test.cpp  info.txt  instantiation_test.cpp
test/objects/: a.out  fail_compile.cpp  inclusion_test.cpp  info.txt  instantiation_test.cpp  tnil.cpp  unicode_char_test.cpp
test/processes/: complex-send-recv-spawn.test  info.txt  multiple-procs.test  simple-send-recv.t  simple-send-recv.test  single.t  single.test  two.t  two.test
test/reader/: .gitignore  Makefile.am  compile_test1  dotest.pl  info.txt  test1.cpp
test/reader/tests/: t1.bc  t1.test  t2.test
test/thread/: compile_test  inclusion_test.cpp  info.txt  producer_consumer_test.cpp
test/types/: compile_test  inclusion_test.cpp  info.txt  keys_table_test.cpp  string_test.cpp  tables_test.cpp
www/: Makefile  NOTE  book.txt  collate  crumbs  dev-status.txt  goals.txt  index.txt  legit-axioms.txt  legit-base-system.txt  legit-common.txt  legit-event.txt  legit-global-vars.txt  legit-gvl.txt  legit-io.txt  legit-numbers.txt  legit-standard.txt  legit-string.txt  legit.txt  why-it-needs-to-be.txt
www/htdocs/: .gitignore  .htaccess  NOTE  hl.css  site
www/sample/: objess.hl  stm.hl
