CPPFLAGS = -I@BOOST_PATH@ -I../inc -I../os -I..
LDFLAGS = @PTHREAD_LIB@

bin_PROGRAMS = hl
hl_SOURCES = \
	globals.cpp \
	symbols.cpp \
	heaps.cpp \
	symtable.cpp \
	main.cpp \
	processes.cpp \
	types.cpp \
	executors.cpp \
	reader.cpp \
	workers.cpp \
	../inc/all_defines.hpp \
	../inc/bytecodes.hpp \
	../inc/executors.hpp \
	../inc/generics.hpp \
	../inc/hashes.hpp \
	../inc/heaps.hpp \
	../inc/intrusives.hpp \
	../inc/lockeds.hpp \
	../inc/mutexes.hpp \
	../inc/objects.hpp \
	../inc/processes.hpp \
	../inc/reader.hpp \
	../inc/specializeds.hpp \
	../inc/symbols.hpp \
	../inc/types.hpp \
	../inc/unichars.hpp \
	../inc/workarounds.hpp \
	../inc/workers.hpp \
	../os/thread.hpp
